# try-nix

./: .gitignore  README.md  flake.nix
.devcontainer/: devcontainer.json
nodejs/: package.json
python/: pyproject.toml
python/src/python/: __init__.py
